cmake_minimum_required(VERSION 3.24)
project(Programmers)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programmers
        K번째수/K번째수.cpp
        "x만큼 간격이 있는 n개의 숫자/x만큼 간격이 있는 n개의 숫자.cpp"
        "같은 숫자는 싫어/같은 숫자는 싫어.cpp"
        구명보트/구명보트.cpp
        기능개발/기능개발.cpp
        "더 맵게/더 맵게.cpp"
        "소수 찾기/소수 찾기.cpp"
        "올바른 괄호/올바른 괄호.cpp"
        "완주하지 못한 선수/완주하지 못한 선수.cpp"
        "자릿수 더하기/자릿수 더하기.cpp"
        "전화번호 목록/전화번호 목록.cpp"
        체육복/체육복.cpp
        최소직사각형/최소직사각형.cpp
        폰켓몬/폰켓몬.cpp
        "행렬의 덧셈/행렬의 덧셈.cpp"
        히샤드수/히샤드수.cpp)
